--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <!-- hier zet je de code in de body tags -->
+        <h1>Hallo allemaal!</h1>
+        <h2>Korte introductie</h2>
+        <hr>
+        <p>Ik ben Mieke en ik volg de cursus Web Development bij de Winc Academy. Ik ben benieuwd wat ik allemaal ga leren.</p>
+
     </body>
 </html>
